...
    <string name="image_file">Image File</string>
    <string name="showimage">showImage: %1$s</string>
    <string name="upload_error">Upload Error</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="upload_success">Upload Success</string>
    <string name="failed">Failed</string>
    <string name="retry">Retry</string>
    <string name="story_detail">Story Detail</string>
    <string name="error_occurred">Error Occurred: %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="login_success">Login Success</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty">Empty</string>
    <string name="widget_image">Widget Image</string>
    <string name="refresh">Refresh</string>
    <string name="change_language">Change Language</string>
...
